Limpia build y gradle, actualiza rutas y formulario

--- a/src/main/resources/form.html
+++ b/src/main/resources/form.html
@@ -87,7 +87,7 @@
             <div class="g-recaptcha"
                  data-sitekey="6LezqGgsAAAAAHS8EPhxOi1WRM1YZBdV4IPMzxm8"></div>
 
-            <button type="submit">Enviar</button>
+            <button>Enviar</button>
 
         </form>
 
